// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPriceRange should render correctly when show price marker 1`] = `
<DocumentFragment>
  <div
    class="bpk-price-range bpk-price-range--large"
    style="--low: 0.2; --high: 0.8; --prefilled-width: 0px;"
  >
    <div
      class="bpk-price-range__price"
    >
      <div
        class="bpk-price-marker"
      >
        <div
          class="bpk-price-marker__marker bpk-price-marker--low"
        >
          <span
            class="bpk-text bpk-text--label-2"
          >
            £50
          </span>
        </div>
        <div
          class="bpk-price-marker__arrow bpk-price-marker--low"
        />
      </div>
    </div>
    <div
      class="bpk-price-range__lines bpk-price-range__lines--large"
    >
      <div
        class="bpk-price-range__line--low bpk-price-range__line--lowLarge"
      />
      <div
        class="bpk-price-range__line--typical"
      />
      <div
        class="bpk-price-range__line--high bpk-price-range__line--highLarge"
      />
    </div>
    <div
      class="bpk-price-range__ranges"
    >
      <span
        class="bpk-text bpk-text--footnote"
      >
        £100
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      >
        £200
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceRange should render high price indicator correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price-range"
    style="--low: 0.2; --high: 0.8; --prefilled-width: 0px;"
  >
    <div
      class="bpk-price-range__lines"
    >
      <div
        class="bpk-price-range__line--low"
      />
      <div
        class="bpk-price-range__line--typical"
      />
      <div
        class="bpk-price-range__line--high"
      />
      <div
        class="bpk-price-range__line--high bpk-price-range__line--dot"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceRange should render low price indicator correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price-range"
    style="--low: 0.2; --high: 0.8; --prefilled-width: 0px;"
  >
    <div
      class="bpk-price-range__lines"
    >
      <div
        class="bpk-price-range__line--low"
      />
      <div
        class="bpk-price-range__line--typical"
      />
      <div
        class="bpk-price-range__line--high"
      />
      <div
        class="bpk-price-range__line--low bpk-price-range__line--dot"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceRange should render typical price indicator correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price-range"
    style="--low: 0.2; --high: 0.8; --prefilled-width: 0px;"
  >
    <div
      class="bpk-price-range__lines"
    >
      <div
        class="bpk-price-range__line--low"
      />
      <div
        class="bpk-price-range__line--typical"
      />
      <div
        class="bpk-price-range__line--high"
      />
      <div
        class="bpk-price-range__line--typical bpk-price-range__line--dot"
      />
    </div>
  </div>
</DocumentFragment>
`;
